# simulation_toolkit

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  GoogleTest.CMakeLists.txt.in  README.md  bootstrap.sh  linux_aarch64.tch  run_tests.bat  run_tests.sh  run_tests_vcpkg.bat  travis.yml  update.bat  update.sh  update_arm64.sh  update_debug.bat  update_vcpkg.bat  vcpkg.json
exact/: CMakeLists.txt  License.md
exact/cmake/: stk-exact-config.cmake
exact/exact/: exact_export.hpp  predicates.cpp  predicates.hpp  version.hpp
gtest_runner/: CMakeLists.txt  gtest_runner.cpp
ska/: CMakeLists.txt  bytell_hash_map.hpp
ska/ska/: bytell_hash_map.hpp  flat_hash_map.hpp
stk/: CMakeLists.txt
stk/stk/: version.hpp
stk/stk/compiler/: disable_warning.hpp  warnings.hpp
stk/stk/container/: atomic_markable_ptr.hpp  atomic_marked_ptr.hpp  atomic_stampable_ptr.hpp  bytell_hash_map.hpp  collision_grid.hpp  concurrent_hash_grid.hpp  concurrent_integral_map.hpp  concurrent_numeric_unordered_map.hpp  concurrent_pointer_unordered_map.hpp  concurrent_skip_list.hpp  concurrent_vector.hpp  event_dispatch.hpp  fine_locked_hash_map.hpp  flat_hash_map.hpp  generator_iterator.hpp  lock_free_concurrent_skip_list.hpp  lock_free_hash_set.hpp  locked_hash_map.hpp  locked_list.hpp  locked_queue.hpp  multi_index_container.hpp  qsbr.hpp  quiesce_memory_reclaimer.hpp  ref_count_memory_reclaimer.hpp  ref_count_node_manager.hpp  small_flat_map.hpp  small_flat_set.hpp  split_mix.hpp  type_storage.hpp  type_storage_pod.hpp  unordered_map.hpp
stk/stk/container/detail/: grid_traverser.hpp  skip_list.hpp
stk/stk/container/experimental/: concurrent_list.hpp  concurrent_skip_list.hpp  concurrent_vector.hpp  lazy_concurrent_skip_list.hpp  memory_reclamation_traits.hpp  node_deletion_manager.hpp  qsbr_allocator.hpp  quiesce_memory_reclaimer.hpp  ref_count_memory_reclaimer.hpp  simple_qsbr.hpp  simple_qsbr_singleton.hpp
stk/stk/container/icl/: associative_element_container.hpp  associative_interval_container.hpp  closed_interval.hpp  continuous_interval.hpp  map.hpp  (+23 more)
stk/stk/fiber/: boost_fiber_traits.hpp  fiber_pool.hpp  fiber_spin_lock_wait_strategies.hpp  fiber_thread_system.hpp  make_ready_future.hpp  work_stealing_fiber_pool.hpp
stk/stk/geometry/: apply_unit.hpp  clipper_boolean_operations.hpp  curve_decomposition.hpp  geometry_kernel.hpp  rtree_cache.hpp  rtree_cache.ipp  serialization.hpp  signed_distance.hpp  tolerance_policy.hpp  transformer.hpp
stk/stk/graph/: astar.hpp  boost_adapters.hpp  crs_graph.hpp  crs_graph_builders.hpp  dijkstras_shortest_path.hpp  stoppable_astar_search.hpp  stoppable_breadth_first_search.hpp  temporary_vertex_graph_adaptor.hpp
stk/stk/math/: boost_units_math.hpp  boost_units_math_approx.hpp  interval.hpp  math.hpp  math_approx.hpp  math_kernel.hpp  operators.hpp  tagged_quantity_math.hpp  tagged_quantity_math_approx.hpp
stk/stk/optimization/: random_search.hpp  simulated_annealing.hpp  spsa.hpp
stk/stk/random/: linear_distribution.hpp  maxwell_boltzmann_distribution.hpp  truncated_normal_distribution.hpp  wells512_generator.hpp  xoroshiro128plus_generator.hpp  xorshift1024starphi_generator.hpp  xorshift128plus_generator.hpp  zero_truncated_poisson_distribution.hpp
stk/stk/sim/: binary_logit_model.hpp  derivative.hpp  histogram_1d.hpp  histogram_1d.ipp  line_function.hpp  linear_data_interpolator.hpp  logistic_function.hpp
stk/stk/test/: gtest_custom_message.hpp
stk/stk/thread/: active_object.hpp  atomic_spin_lock.hpp  backoff.hpp  barrier.hpp  blockingconcurrentqueue.h  boost_fiber_traits.hpp  boost_lockfree_queue.hpp  boost_thread_kernel.hpp  boost_yield_wait_strategies.hpp  cache_line_padding.hpp  clh_lock.hpp  concurrentqueue.h  concurrentqueue_queue_info.h  concurrentqueue_queue_info_no_tokens.h  fiber_pool.hpp  fiber_thread_system.hpp  fixed_function.hpp  free_list.hpp  function_wrapper.hpp  function_wrapper_with_allocator.hpp  job_manager.hpp  job_tracker.hpp  lazy_ptr.hpp  locked_item.hpp  make_ready_future.hpp  message_queue.hpp  null_wait_strategy.hpp  on_thread_exit.hpp  once_block.hpp  optimize_partition.hpp  partition_work.hpp  pool_polling_mode.hpp  pool_work_stealing.cpp  pool_work_stealing.hpp  race_detector.hpp  rw_race_detector.hpp  scalable_task_counter.hpp  seq_executor.hpp  set_thread_use_scheduling_algorithm.hpp  spin_lock_wait_strategies.hpp  (+14 more)
stk/stk/units/: boost_units.hpp  probability.hpp
stk/stk/utility/: aligned_alloc.hpp  aligned_allocator.hpp  associative_insert.hpp  atomic_shared_ptr.hpp  boost_parameter.hpp  boost_unique_ptr.hpp  color.hpp  color_spectrum.hpp  colors.hpp  compound_id.hpp  compressed_integer_pair.hpp  deprecated.hpp  floating_point_traits.hpp  hash_map_reduce.hpp  infix_iterator.hpp  jemallocator.hpp  linspace.hpp  make_integer_range.hpp  make_vector.hpp  memory_pool.hpp  none.hpp  null_deleter.hpp  offset.hpp  owned_ptr.hpp  pimpl.hpp  pimpl.ipp  rpmalloc_allocator.hpp  rpmalloc_deleter.hpp  rpmalloc_system.hpp  scope_exit.hpp  serialization.hpp  string_hash.hpp  synthetic_work.hpp  time_execution.hpp  type_switch.hpp  unsigned_integer.hpp
test/: CMakeLists.txt  biased_position_generator_tests.cpp  bugged_geometry.hpp  clipper_tests.cpp  color_tests.cpp  compound_id_tests.cpp  concurrency_tests.cpp  concurrent_integral_map_tests.cpp  concurrent_list_tests.cpp  concurrent_skip_list_tests.cpp  concurrent_vector_tests.cpp  container_tests.cpp  exact_tests.cpp  fiber_concurrency_tests.cpp  fiber_timing_tests.cpp  fixed_point_tests.cpp  graph_tests.cpp  hash_grid_tests.cpp  hash_tests.cpp  is_vector_between_tests.cpp  math_tests.cpp  memory_tests.cpp  message_queue_tests.cpp  owned_ptr_tests.cpp  partition_tests.cpp  pimpl_test.cpp  pimpl_test.hpp  pimpl_tests.cpp  pool_work_stealing.cpp  random_tests.cpp  rpmalloc_tests.cpp  rtree_cache_tests.cpp  serialization_tests.cpp  shared_module1.cpp  shared_module2.cpp  skynet_tests.cpp  static_thread_pool_exit_tests.cpp  stoppable_astar_tests.cpp  stoppable_bfs_tests.cpp  temporary_vertex_graph_adaptor_tests.cpp  (+9 more)
(+150 files in other folders)
